phase-07-kubernetes-helm/day-36-final-kubernetes-project/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devsecops-web-service
  namespace: devsecops

spec:

  selector:
    app: devsecops-web

  ports:

    - port: 80
      targetPort: 80

  type: NodePort
