phase-07-kubernetes-helm/day-36-final-kubernetes-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devsecops-final-ingress
  namespace: devsecops

spec:
  ingressClassName: nginx

  rules:
    - host: devsecops-final.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devsecops-web-service
                port:
                  number: 80
