phase-07-kubernetes-helm/day-36-final-kubernetes-project/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: web-network-policy
  namespace: devsecops

spec:

  podSelector:
    matchLabels:
      app: devsecops-web

  policyTypes:
    - Ingress

  ingress:

    - from:
        - podSelector: {}
